fixed massive gaps between pictures

--- a/src/components/ImageList.css
+++ b/src/components/ImageList.css
@@ -1,10 +1,10 @@
-.image-list {
+.image-list{
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-gap: 10px;
-    grid-auto-rows: 100px;
+    grid-gap: 0 10px;
+    grid-auto-rows: 10px;
 }
 
-.image-list img {
+.image-list img{
     width: 250px;
 }
